// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arbitrary properties > [--scroll-offset:56px] lg:[--scroll-offset:44px] 1`] = `
"<div class="_b--scroll-offset_c56px_B lg_c_b--scroll-offset_c44px_B">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary properties > [mask-type:luminance] 1`] = `
"<div class="_bmask-type_cluminance_B">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary properties > [mask-type:luminance] hover:[mask-type:alpha] 1`] = `
"<div class="_bmask-type_cluminance_B hover_c_bmask-type_calpha_B">
      <!-- ... -->
    </div>"
`;
